--- a/individual-work/second-website/stories.html
+++ b/individual-work/second-website/stories.html
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <div>
-                    <<a href="about.html">
+                    <a href="about.html">
                         <button>about</button>
                     </a>
                 </div>
