--- a/individual-work/second-website/about.html
+++ b/individual-work/second-website/about.html
@@ -76,43 +76,47 @@
         </div>
     </header>
     <section>
-        <div class="content-main">
-            <div class="content-sub-main">
-                <div class="box-1">
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even slightly
-                        believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
-                        anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
-                        Internet tend to repeat predefined chunks as necessary, making this the first true generator on
-                        the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
-                        sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum
-                        is therefore always free from repetition, injected humour, or non-characteristic words etc.
-                    </p>
-                </div>
-                <div class="box-2">
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look like
-                        readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                        their default model text, and a search for 'lorem ipsum' will uncover many web sites still in
-                        their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on
-                        purpose (injected humour and the like).</p>
-                </div>                
-            </div>
-        </div>
-        <div class="content-main-second">
-            <div class="content-sub-main-second">
-                <div class="box2-1">
-                    <p>
-                        bution of letters, as opposed to using 'Content here, content here', making it look like
-                        readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                        their default model text, and a search for 'lorem ipsum' will uncover many web sites still in
-                        their infancy. Various versions have
-                    </p>
+        <div id="first-grid">
+            <div class="content-main">
+                <div class="content-sub-main">
+                    <div class="box-1">
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even slightly
+                            believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
+                            anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                            Internet tend to repeat predefined chunks as necessary, making this the first true generator on
+                            the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+                            sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum
+                            is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                        </p>
+                    </div>
+                    <div class="box-2">
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                            when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                            distribution of letters, as opposed to using 'Content here, content here', making it look like
+                            readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
+                            their default model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                            their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on
+                            purpose (injected humour and the like).</p>
+                    </div>                
                 </div>
             </div>
         </div>
+        <!-- <div id="second-grid">
+            <div class="content-main-second">
+                <div class="content-sub-main-second">
+                    <div class="box2-1">
+                        <p>
+                            bution of letters, as opposed to using 'Content here, content here', making it look like
+                            readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
+                            their default model text, and a search for 'lorem ipsum' will uncover many web sites still in
+                            their infancy. Various versions have
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>         -->
     </section>
     <footer>
         <div class="footer-main">
