--- a/individual-work/second-website/about.html
+++ b/individual-work/second-website/about.html
@@ -40,11 +40,11 @@
 
 <body>
     <header>
-        <div class="nav-bar-main-photo">
+        <!-- <div class="nav-bar-main-photo">
             <div class="nav-bar-sub-main-photo">
                 <img src="logo-4.png" alt="logo">
             </div>
-        </div>
+        </div> -->
         <div class="nav-bar-main">
             <div class="nav-bar-sub-main">
                 <div>
