--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -42,9 +42,9 @@
 
     <header>
         <div class="nav-bar-main-photo">
-            <div class="nav-bar-sub-main-photo">
+            <!-- <div class="nav-bar-sub-main-photo">
                 <img src="logo-4.png" alt="logo">
-            </div>
+            </div> -->
         </div>
         <div class="nav-bar-main">
             <div class="nav-bar-sub-main">
