--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -48,22 +48,22 @@
         </div>
         <div class="nav-bar-main">
             <div class="nav-bar-sub-main">
-                <div>
+                <div class="nav-bar-item">
                     <a href="index.html">
                         <button>home</button>
                     </a>
                 </div>
-                <div>
+                <div class="nav-bar-item">
                     <a href="gallery.html">
                         <button>gallery</button>
                     </a>
                 </div>
-                <div>
+                <div class="nav-bar-item">
                     <a href="stories.html">
                         <button>stories</button>
                     </a>
                 </div>
-                <div>
+                <div class="nav-bar-item">
                     <a href="about.html">
                         <button>about</button>
                     </a>
@@ -87,6 +87,7 @@
                 </div>
                 <div class="box-3">
                     <p><span>Děkujeme za návštěvu,</span>
+
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                         sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
