--- a/individual-work/second-website/index.html
+++ b/individual-work/second-website/index.html
@@ -80,10 +80,10 @@
         <div class="content-main">
             <div class="content-sub-main">
                 <div class="box-1">
-                    <img src="8.JPG" alt="foto6">
+                    <img src="imgs/8.JPG" alt="foto6">
                 </div>
                 <div class="box-2">
-                    <img src="6.JPG" alt="foto4">
+                    <img src="imgs/6.JPG" alt="foto4">
                 </div>
                 <div class="box-3">
                     <p><span>Děkujeme za návštěvu,</span>
@@ -97,11 +97,11 @@
                 </div>
 
                 <div class="box-4">
-                    <img src="5.JPG" alt="foto3">
+                    <img src="imgs/5.JPG" alt="foto3">
                 </div>
 
                 <div class="box-5">
-                    <img src="3.JPG" alt="foto2">
+                    <img src="imgs/3.JPG" alt="foto2">
                 </div>
                 <!--
                 <div class="box-5">
@@ -125,13 +125,13 @@
             </div>
         </div>
     </section>
-    <footer>
+    <!-- <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
