--- a/individual-work/second-website/gallery.html
+++ b/individual-work/second-website/gallery.html
@@ -80,69 +80,69 @@
             <div class="content-sub-main">
                 <div class="box-1">
                     <a href="18.JPG" target="_blank">
-                        <img src="18.JPG" alt="foto">
+                        <img src="imgs/18.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-2">
                     <a href="9.JPG" target="_blank">
-                        <img src="9.JPG" alt="foto">
+                        <img src="imgs/9.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-3">
                     <a href="7.JPG" target="_blank"> 
-                        <img src="7.JPG" alt="foto">
+                        <img src="imgs/7.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-4">
                     <a href="5.JPG" target="_blank"> 
-                        <img src="5.JPG" alt="foto">
+                        <img src="imgs/5.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-5">
                     <a href="3.JPG" target="_blank"> 
-                        <img src="3.JPG" alt="foto">
+                        <img src="imgs/3.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-5">
                     <a href="7.JPG" target="_blank"> 
-                        <img src="7.JPG" alt="foto">
+                        <img src="imgs/7.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-6">
                     <a href="10.JPG" target="_blank"> 
-                        <img src="10.JPG" alt="foto">
+                        <img src="imgs/10.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-7">
                     <a href="2.JPG" target="_blank"> 
-                        <img src="2.JPG" alt="foto">
+                        <img src="imgs/2.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-8">
                     <a href="8.JPG" target="_blank"> 
-                        <img src="8.JPG" alt="foto">
+                        <img src="imgs/8.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-9">
                     <a href="6.JPG" target="_blank"> 
-                        <img src="6.JPG" alt="foto">
+                        <img src="imgs/6.JPG" alt="foto">
                     </a>
                 </div>
                 <div class="box-10">
                     <a href="22.JPG" target="_blank"> 
-                        <img src="22.JPG" alt="foto">
+                        <img src="imgs/22.JPG" alt="foto">
                     </a>
                 </div>
             </div>
         </div>
     </section>
-    <footer>
+   <!--  <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
