--- a/individual-work/second-website/stories.html
+++ b/individual-work/second-website/stories.html
@@ -79,7 +79,7 @@
         <div class="content-main">
             <div class="content-sub-main">
                 <div class="box-1">
-                    <img src="3.JPG" alt="foto">
+                    <img src="imgs/3.JPG" alt="foto">
                 </div>
                 <div class="box-2">
                     <p>
@@ -98,18 +98,18 @@
                     </p>
                 </div>
                 <div class="box-4">
-                    <img src="9.JPG" alt="foto">
+                    <img src="imgs/9.JPG" alt="foto">
                 </div>
             </div>
         </div>
     </section>
-    <footer>
+    <!-- <footer>
         <div class="footer-main">
             <div class="footer-sub-main">
                 <p>Web - David Pitra 2022</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
