--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>logo</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <header class="nav-bar">
+        <div>
+
+        </div>
+    </header>
+    <section class="main-content">
+        <div>
+
+        </div>
+    </section>
+
 </body>
+
 </html>
