--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -6,20 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>logo</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
     <header class="nav-bar">
-        <div>
 
+        <div class="nav-bar-item">
+            <img src="imgs/default-logo.png" alt="logo">
         </div>
+
+        <div class="nav-bar-item">
+            <p>ahoj</p>
+        </div>
+
     </header>
     <section class="main-content">
-        <div>
-
+        <div class="welcome-paragraph">
+            <p>
+                WE CREATE BRANDS THE WORLD LOVES
+            </p>
+        </div>
+        <div class="about-paragraph">
+            <p>
+                about design studio
+            </p>
+        </div>
+        <div class="information-paragraph">
+            <p>
+                sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi
+                nunc, et molestie ipsum iaculis sit ame
+            </p>
+        </div>
+        <div class="button">
+            <button>
+                
+            </button>
+        </div>
+        <div class="grid">
+            <p></p>
         </div>
     </section>
 
