--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -8,6 +8,36 @@
     <title>logo</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,34 +49,37 @@
         </div>
 
         <div class="nav-bar-item">
-            <p>ahoj</p>
+            <p></p>
         </div>
 
     </header>
     <section class="main-content">
-        <div class="welcome-paragraph">
-            <p>
-                WE CREATE BRANDS THE WORLD LOVES
-            </p>
-        </div>
-        <div class="about-paragraph">
-            <p>
-                about design studio
-            </p>
-        </div>
-        <div class="information-paragraph">
-            <p>
-                sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi
-                nunc, et molestie ipsum iaculis sit ame
-            </p>
-        </div>
-        <div class="button">
-            <button>
-                
-            </button>
-        </div>
-        <div class="grid">
-            <p></p>
+        <div class="sub-main-content">
+            <div class="sub-main-item">
+                <p>
+                    WE CREATE BRANDS THE WORLD LOVES
+                </p>
+            </div>
+            <div class="sub-main-item">
+                <p>
+                    About Design Studio
+                </p>
+            </div>
+            <div class="sub-main-item">
+                <p>
+                    Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elitsapien. Quisque fringilla sit amet
+                    dolor commodo efficitur. Aliquam et sem odio. In ullam corper nisi
+                    nunc, et molestie ipsum iaculis sit ame
+                </p>
+            </div>
+            <div class="button">
+                <button>
+                    LEARN MORE
+                </button>
+            </div>
+            <div class="grid">
+                <p></p>
+            </div>
         </div>
     </section>
 
