--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -38,6 +38,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -73,14 +79,42 @@
                 </p>
             </div>
             <div class="button">
-                <button>
-                    LEARN MORE
-                </button>
-            </div>
-            <div class="grid">
-                <p></p>
+
+                <a
+                    href="https://nicepage.com/website-templates/preview/custom-web-based-solutions-117537?device=desktop"><button>
+                        LEARN MORE
+                    </button></a>
             </div>
         </div>
+        <div class="grid">
+            <div class="sub-grid">
+                <div class="A">
+                    <img src="imgs/bag.svg" alt="bag">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="B">
+                    <img src="imgs/rocket.svg" alt="rocket">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="C">
+                    <img src="imgs/palette.svg" alt="palette">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="D">
+                    <img src="imgs/megaphone.svg" alt="megaphone">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 </body>
