--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -116,6 +116,11 @@
         </div>
 
     </section>
+    <footer class="footer-main">
+        <div class="sub-footer-main">
+            <p>sample text</p>
+        </div>
+    </footer>
 
 </body>
 
