--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -118,7 +118,14 @@
     </section>
     <footer class="footer-main">
         <div class="sub-footer-main">
-            <p>sample text</p>
+            <div class="footer-item">
+                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+            </div>
+            <div class="footer-item">
+                <p>
+                    <span>Website Templates</span> created with <span>Website Builder Software</span>
+                </p>
+            </div>
         </div>
     </footer>
 
