--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
     <header class="nav-bar">
 
         <div class="nav-bar-item">
@@ -55,7 +54,9 @@
         </div>
 
         <div class="nav-bar-item">
-            <p></p>
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
         </div>
 
     </header>
@@ -87,32 +88,39 @@
             </div>
         </div>
         <div class="grid">
-            <div class="sub-grid">
-                <div class="A">
-                    <img src="imgs/bag.svg" alt="bag">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="B">
-                    <img src="imgs/rocket.svg" alt="rocket">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="C">
-                    <img src="imgs/palette.svg" alt="palette">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="D">
-                    <img src="imgs/megaphone.svg" alt="megaphone">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
+            <div id="3">
+                <div class="sub-grid">
+                    <div class="A">
+                        <img src="imgs/bag.svg" alt="bag">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                            text.
+                        </p>
+                    </div>
+                    <div class="B">
+                        <img src="imgs/rocket.svg" alt="rocket">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                            text.
+                        </p>
+                    </div>
+                    <div class="C">
+                        <img src="imgs/palette.svg" alt="palette">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                            text.
+                        </p>
+                    </div>
+                    <div class="D">
+                        <img src="imgs/megaphone.svg" alt="megaphone">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                            text.
+                        </p>
+                    </div>
                 </div>
             </div>
+
         </div>
 
     </section>
