--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -34,15 +34,20 @@ Struktura složky projektu:
     fonts - pouze v případě, že  budete stahovat fonty -->
 <body>
     <header>
-        <nav>
-            <div>
-
+        <nav class="nav">
+            <div class="nav-icon">
+                <img src="images/logo.png" alt="logo">
             </div>
-            <div>   
-                
+            <div class="nav-tri-bar">   
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </nav>
     </header>
+    <section>
+        
+    </section>
 
 
 </body>
