--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <!--Náležitosti:
     styly budou zapsané v SCSS
@@ -32,23 +34,33 @@ Struktura složky projektu:
         img.svg
         img.png
     fonts - pouze v případě, že  budete stahovat fonty -->
+
 <body>
     <header>
-        <nav class="nav">
-            <div class="nav-icon">
-                <img src="images/logo.png" alt="logo">
-            </div>
-            <div class="nav-tri-bar">   
-                <div></div>
-                <div></div>
-                <div></div>
+        <nav class="nav-bar">
+            <div class="nav-bar-content">
+                <div class="nav-icon">
+                    <img src="images/logo.png" alt="logo">
+                </div>
+                <div class="nav-button">
+                    <a href="" target="_blank" class="line-container">
+                        <div class="one"></div>
+                        <div class="two"></div>
+                        <div class="three"></div>
+                    </a>
+                </div>
             </div>
         </nav>
     </header>
     <section>
-        
+        <div class="content-container">
+            <div class="">
+
+            </div>
+        </div>
     </section>
 
 
 </body>
+
 </html>
