--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -37,28 +37,44 @@ Struktura složky projektu:
 
 <body>
     <header>
-        <nav class="nav-bar">
-            <div class="nav-bar-content">
+        <img class="helo" src="images/logo.png" alt="logo">
+        <nav class="nav-bar-container">
+            <div class="nav-bar-sub-container">
                 <div class="nav-icon">
                     <img src="images/logo.png" alt="logo">
                 </div>
                 <div class="nav-button">
-                    <a href="" target="_blank" class="line-container">
+                    <!-- <a href="" target="_blank" class="line-container"> </a> -->
+                    <div class="line-container">
                         <div class="one"></div>
                         <div class="two"></div>
                         <div class="three"></div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <section>
         <div class="content-container">
-            <div class="">
+            <div class="welcome-banner">
+
+            </div>
+            <div class="photos-section">
+
+            </div>
+            <div class="registration-button">
+
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-information">
 
             </div>
         </div>
-    </section>
+    </footer>
 
 
 </body>
