--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -57,7 +57,14 @@ Struktura složky projektu:
     <section>
         <div class="content-container">
             <div class="welcome-banner">
-
+                <h1>
+                    DOVOLENÁ S NÁMI
+                </h1>
+                <P>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
+                    lacinia. Sed convallis magna eu sem.
+                </P>
+                <button>CHCI S VÁMI!</button>
             </div>
             <div class="photos-section">
 
