--- a/individual-work/template-website/index.html
+++ b/individual-work/template-website/index.html
@@ -46,6 +46,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <!-- https://nicepage.com/website-templates/preview/custom-web-based-solutions-117537?device=desktop -->
+
 <body>
     <header class="nav-bar">
 
@@ -81,8 +82,7 @@
             </div>
             <div class="button">
 
-                <a
-                    href="https://nicepage.com/website-templates/preview/custom-web-based-solutions-117537?device=desktop"><button>
+                <a href="https://nicepage.com/website-templates/preview/custom-web-based-solutions-117537?device=desktop"><button>
                         LEARN MORE
                     </button></a>
             </div>
