--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
 </head>
 <!--Náležitosti:
     styly budou zapsané v SCSS
@@ -57,22 +60,46 @@ Struktura složky projektu:
     <section>
         <div class="content-container">
             <div class="welcome-banner">
-                <h1>
-                    DOVOLENÁ S NÁMI
-                </h1>
-                <P>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
-                    lacinia. Sed convallis magna eu sem.
-                </P>
-                <button>CHCI S VÁMI!</button>
+                <div>
+                    <h1>
+                        DOVOLENÁ S NÁMI
+                    </h1>
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
+                        lacinia. Sed convallis magna eu sem.
+                    </p>
+                </div>
+                <div>
+                    <button>CHCI S VÁMI!</button>
+                </div>
             </div>
-            <div class="photos-section">
-
+            <div class="offers-section">
+                <div class="offers-section-heading">
+                    <p>PROZKOUMEJTE KRÁSY EVROPSKÝCH OSTROVŮ</p>
+                </div>
+                <div class="offer-section-1">
+                    <div>
+                        <img src="images/offer1.jpg" alt="offer1">
+                    </div>
+                    <div class="sub-offer-section-1">
+                        <div>
+                            <h3>ATLANTICKÉ OSTROVY</h3>
+                        </div>
+                        <div>
+                            <p>
+                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                iaculis
+                                gravida nulla.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="registration-button">
 
             </div>
-
         </div>
     </section>
     <footer>
