--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -96,16 +96,57 @@ Struktura složky projektu:
                         </div>
                     </div>
                 </div>
+                <div class="offer-section-2">
+                    <div>
+                        <img src="images/offer2.jpg" alt="offer2">
+                    </div>
+                    <div class="sub-offer-section-2">
+                        <div>
+                            <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
+                        </div>
+                        <div>
+                            <p>
+                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                iaculis
+                                gravida nulla.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-section-3">
+                    <div>
+                        <img src="images/offer3.jpg" alt="offer3">
+                    </div>
+                    <div class="sub-offer-section-3">
+                        <div>
+                            <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
+                        </div>
+                        <div>
+                            <p>
+                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                iaculis
+                                gravida nulla.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="registration-button">
-
+                <div>
+                    <button>CHCI S VÁMI!</button>
+                </div>
             </div>
         </div>
     </section>
     <footer>
         <div class="footer-container">
             <div class="footer-information">
-
+                <div>
+                    OBCHODNÍ PODMÍNKY
+                </div>
+                <DIV>
+                    OCHRANA OSOBNÍCH ÚDAJŮ
+                </DIV>
             </div>
         </div>
     </footer>
