--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -72,7 +72,7 @@ Struktura složky projektu:
                     </p>
                 </div>
                 <div>
-                    <button>CHCI S VÁMI!</button>
+                    <button>CHCI S ŘŘŘVÁMI!</button>
                 </div>
             </div>
             <div class="offers-section">
