--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
 </head>
 <!--Náležitosti:
     styly budou zapsané v SCSS
@@ -72,7 +78,7 @@ Struktura složky projektu:
                     </p>
                 </div>
                 <div>
-                    <button>CHCI S ŘŘŘVÁMI!</button>
+                    <button>CHCI S VÁMI!</button>
                 </div>
             </div>
             <div class="offers-section">
@@ -144,9 +150,9 @@ Struktura složky projektu:
                 <div>
                     OBCHODNÍ PODMÍNKY
                 </div>
-                <DIV>
+                <div>
                     OCHRANA OSOBNÍCH ÚDAJŮ
-                </DIV>
+                </div>
             </div>
         </div>
     </footer>
