--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <img class="helo" src="images/logo.png" alt="logo">
@@ -37,10 +39,60 @@
         </nav>
     </header>
     <section>
-        
-
-
-
+        <div>
+            <div class="section-content-container">
+                <div class="sub-section-content-container">
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/coronavirus.svg" alt="coronavirus">
+                        </div>
+                        <div>
+                            <p>AKTUÁLNĚ COVID-19</p>
+                        </div>
+                    </div>
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/luggage.svg" alt="luggage">
+                        </div>
+                        <div>
+                            <p>PRŮBĚH DOVOLENÉ</p>
+                        </div>
+                    </div>
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/sale.png" alt="sale">
+                        </div>
+                        <div>
+                            <p>SLEVOVÝ SYSTÉM</p>
+                        </div>
+                    </div>
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/doc 1.svg" alt="document">
+                        </div>
+                        <div>
+                            <p>SMLOUVA O ZÁJEZDU</p>
+                        </div>
+                    </div>
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/doc 1.svg" alt="document">
+                        </div>
+                        <div>
+                            <p>CESTOVNÍ POJIŠTĚNÍ</p>
+                        </div>
+                    </div>
+                    <div class="section-content-item">
+                        <div>
+                            <img src="images/doc 1.svg" alt="document">
+                        </div>
+                        <div>
+                            <p>OBCHODNÍ PODMÍNKY</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer-container">
@@ -57,4 +109,5 @@
 
 
 </body>
+
 </html>
