--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informace</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,57 +39,29 @@
         </nav>
     </header>
     <section>
-        <div>
-            <div class="section-content-container">
-                <div class="sub-section-content-container">
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/coronavirus.svg" alt="coronavirus">
-                        </div>
-                        <div>
-                            <p>AKTUÁLNĚ COVID-19</p>
-                        </div>
+        <div class="content-container">
+            <div>
+                <div>
+                    <div>
+                        <input type="text">
                     </div>
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/luggage.svg" alt="luggage">
-                        </div>
-                        <div>
-                            <p>PRŮBĚH DOVOLENÉ</p>
-                        </div>
+                    <div>
+                        <input type="text">
                     </div>
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/sale.png" alt="sale">
-                        </div>
-                        <div>
-                            <p>SLEVOVÝ SYSTÉM</p>
-                        </div>
+                    <div>
+                        <input type="text">
                     </div>
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/doc 1.svg" alt="document">
-                        </div>
-                        <div>
-                            <p>SMLOUVA O ZÁJEZDU</p>
-                        </div>
+                    <div>
+                        <input type="text">
                     </div>
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/doc 1.svg" alt="document">
-                        </div>
-                        <div>
-                            <p>CESTOVNÍ POJIŠTĚNÍ</p>
-                        </div>
+                    <div>
+                        <input type="text">
                     </div>
-                    <div class="section-content-item">
-                        <div>
-                            <img src="images/doc 1.svg" alt="document">
-                        </div>
-                        <div>
-                            <p>OBCHODNÍ PODMÍNKY</p>
-                        </div>
-                    </div>
+                </div>
+            </div>
+            <div class="registration-button">
+                <div>
+                    <button>CHCI S VÁMI!</button>
                 </div>
             </div>
         </div>
