--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -43,19 +43,19 @@
             <div>
                 <div>
                     <div>
-                        <input type="text">
+                        <input type="text" value="Jméno"> 
                     </div>
                     <div>
-                        <input type="text">
+                        <input type="text" value="Příjmení">
                     </div>
                     <div>
-                        <input type="text">
+                        <input type="text" value="E-mail">
                     </div>
                     <div>
-                        <input type="text">
+                        <input type="text" value="Telefon">
                     </div>
                     <div>
-                        <input type="text">
+                        <input type="text" value="Vaše zpráva">
                     </div>
                 </div>
             </div>
