--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -39,9 +39,12 @@
         </nav>
     </header>
     <section>
-        <div class="content-container">
+        <div>
             <div>
                 <div>
+                    <div>
+                        <h1>KONTAKT</h1>
+                    </div>
                     <div>
                         <input type="text" value="Jméno"> 
                     </div>
