--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -21,7 +21,6 @@
 
 <body>
     <header>
-        <img class="helo" src="images/logo.png" alt="logo">
         <nav class="nav-bar-container">
             <div class="nav-bar-sub-container">
                 <div class="nav-icon">
@@ -40,13 +39,13 @@
     </header>
     <section>
         <div>
-            <div>
-                <div>
+            <div class="contact-content-container">
+                <div class="contact-content-sub-container">
                     <div>
                         <h1>KONTAKT</h1>
                     </div>
                     <div>
-                        <input type="text" value="Jméno"> 
+                        <input type="text" value="Jméno">
                     </div>
                     <div>
                         <input type="text" value="Příjmení">
