--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -41,30 +41,31 @@
         <div>
             <div class="contact-content-container">
                 <div class="contact-content-sub-container">
-                    <div>
+                    <div class="contact-content-sub-item">
                         <h1>KONTAKT</h1>
                     </div>
-                    <div>
+                    <div class="contact-content-sub-item">
                         <input type="text" value="Jméno">
                     </div>
-                    <div>
+                    <div class="contact-content-sub-item">
                         <input type="text" value="Příjmení">
                     </div>
-                    <div>
+                    <div class="contact-content-sub-item">
                         <input type="text" value="E-mail">
                     </div>
-                    <div>
+                    <div class="contact-content-sub-item">
                         <input type="text" value="Telefon">
                     </div>
-                    <div>
+                    <div class="contact-content-sub-item">
                         <input type="text" value="Vaše zpráva">
                     </div>
+                    <div class="registration-button">
+                        <div>
+                            <button>CHCI S VÁMI!</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="registration-button">
-                <div>
-                    <button>CHCI S VÁMI!</button>
-                </div>
+
             </div>
         </div>
     </section>
