--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -41,6 +41,7 @@
         <div>
             <div class="contact-content-container">
                 <div class="contact-content-sub-container">
+
                     <div class="contact-content-sub-item">
                         <h1>KONTAKT</h1>
                     </div>
@@ -59,7 +60,7 @@
                     <div class="contact-content-sub-item">
                         <input type="text" value="Vaše zpráva">
                     </div>
-                    <div class="registration-button">
+                    <div class="registration-button-contact">
                         <div>
                             <button>CHCI S VÁMI!</button>
                         </div>
