--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
 </head>
 <!--Náležitosti:
     styly budou zapsané v SCSS
@@ -65,20 +65,23 @@ Struktura složky projektu:
     </header>
     <section>
         <div class="content-container">
-            <div class="welcome-banner">
-                <div>
-                    <h1>
-                        DOVOLENÁ S NÁMI
-                    </h1>
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
-                        lacinia. Sed convallis magna eu sem.
-                    </p>
-                </div>
-                <div>
-                    <button>CHCI S VÁMI!</button>
+            <div class="welcome-banner-container">
+                <div class="welcome-banner">
+                    <div>
+                        <h1>
+                            DOVOLENÁ S NÁMI
+                        </h1>
+                    </div>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo
+                            accumsan
+                            lacinia. Sed convallis magna eu sem.
+                        </p>
+                    </div>
+                    <div>
+                        <button>CHCI S VÁMI!</button>
+                    </div>
                 </div>
             </div>
             <div class="offers-section">
