updates towards responsivity

--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -90,7 +90,7 @@ Struktura složky projektu:
                 </div>
                 <div class="offer-section-1">
                     <div>
-                        <img src="images/offer1.jpg" alt="offer1">
+                        <img src="images/offer1.png" alt="offer1">
                     </div>
                     <div class="sub-offer-section-1">
                         <div>
@@ -107,7 +107,7 @@ Struktura složky projektu:
                 </div>
                 <div class="offer-section-2">
                     <div>
-                        <img src="images/offer2.jpg" alt="offer2">
+                        <img src="images/offer2.png" alt="offer2">
                     </div>
                     <div class="sub-offer-section-2">
                         <div>
@@ -124,7 +124,7 @@ Struktura složky projektu:
                 </div>
                 <div class="offer-section-3">
                     <div>
-                        <img src="images/offer3.jpg" alt="offer3">
+                        <img src="images/offer3.png" alt="offer3">
                     </div>
                     <div class="sub-offer-section-3">
                         <div>
@@ -148,16 +148,16 @@ Struktura složky projektu:
         </div>
     </section>
     <footer>
-        <div class="footer-container">
-            <div class="footer-information">
-                <div>
-                    OBCHODNÍ PODMÍNKY
-                </div>
-                <div>
-                    OCHRANA OSOBNÍCH ÚDAJŮ
-                </div>
+
+        <div class="footer-information">
+            <div>
+                OBCHODNÍ PODMÍNKY
+            </div>
+            <div>
+                OCHRANA OSOBNÍCH ÚDAJŮ
             </div>
         </div>
+
     </footer>
 </body>
 
