--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -55,9 +55,9 @@ Struktura složky projektu:
                 <div class="nav-button">
                     <!-- <a href="" target="_blank" class="line-container"> </a> -->
                     <div class="line-container">
-                        <div class="one"></div>
-                        <div class="two"></div>
-                        <div class="three"></div>
+                        <div class="one"><button>DOVOLENÁ</button></div>
+                        <div class="two"><button>PRAKTICKÉ INFORMACE</button></div>
+                        <div class="three"><button>KONTAKT</button></div>
                     </div>
                 </div>
             </div>
@@ -88,54 +88,56 @@ Struktura složky projektu:
                 <div class="offers-section-heading">
                     <p>PROZKOUMEJTE KRÁSY EVROPSKÝCH OSTROVŮ</p>
                 </div>
-                <div class="offer-section-1">
-                    <div>
-                        <img src="images/offer1.png" alt="offer1">
-                    </div>
-                    <div class="sub-offer-section-1">
+                <div class="offer-sections-container">
+                    <div class="offer-section-1">
                         <div>
-                            <h3>ATLANTICKÉ OSTROVY</h3>
+                            <img src="images/offer1.png" alt="offer1">
                         </div>
-                        <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="offer-section-2">
-                    <div>
-                        <img src="images/offer2.png" alt="offer2">
-                    </div>
-                    <div class="sub-offer-section-2">
-                        <div>
-                            <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
-                        </div>
-                        <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
+                        <div class="sub-offer-section-1">
+                            <div>
+                                <h3>ATLANTICKÉ OSTROVY</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="offer-section-3">
-                    <div>
-                        <img src="images/offer3.png" alt="offer3">
-                    </div>
-                    <div class="sub-offer-section-3">
+                    <div class="offer-section-2">
                         <div>
-                            <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
+                            <img src="images/offer2.png" alt="offer2">
                         </div>
+                        <div class="sub-offer-section-2">
+                            <div>
+                                <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-section-3">
                         <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
+                            <img src="images/offer3.png" alt="offer3">
+                        </div>
+                        <div class="sub-offer-section-3">
+                            <div>
+                                <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
