--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -41,7 +41,7 @@
         <div>
             <div class="contact-content-container">
                 <div class="contact-content-sub-container">
-                    <div class="contact-content-sub-item">
+                    <div class="contact-content-heading">
                         <h1>KONTAKT</h1>
                     </div>
                     <div class="contact-content-sub-sub-container">
