--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -34,6 +34,14 @@
                         <div class="three"></div>
                     </div>
                 </div>
+                <!-- <div class="button-container">
+                    <div class="buttons">
+                        <button>DOVOLENÁ</button>
+                        <button>PRAKTICKÉ INFORMACE</button>
+                        <button>KONTAKT</button>
+                    </div>
+
+                </div> -->
             </div>
         </nav>
     </header>
