further buttons edits

--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -36,12 +36,10 @@
                 </div>
                 <div class="button-container">
                     <div class="buttons">
-                        <a href="ijosjfoijp.com" <button>DOVOLENÁ</button></a>
-
-                        <button>PRAKTICKÉ INFORMACE</button>
-                        <button>KONTAKT</button>
+                        <a href="index.html"><button>DOVOLENÁ</button></a>
+                        <a href="information.html"> <button>PRAKTICKÉ INFORMACE</button></a>
+                        <a href="contact.html"><button>KONTAKT</button></a>
                     </div>
-
                 </div>
             </div>
         </nav>
