--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -60,6 +60,13 @@ Struktura složky projektu:
                         <div class="three"><button>KONTAKT</button></div>
                     </div>
                 </div>
+                <div class="button-container">
+                    <div class="buttons">
+                        <a href="index.html"><button>DOVOLENÁ</button></a>
+                        <a href="information.html"> <button>PRAKTICKÉ INFORMACE</button></a>
+                        <a href="contact.html"><button>KONTAKT</button></a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
